--- a/FinancialAssistant/src/main/res/layout/dynamic_layout.xml
+++ b/FinancialAssistant/src/main/res/layout/dynamic_layout.xml
@@ -15,15 +15,23 @@
             android:gravity="center"
             android:layout_margin="5dp"/>
 
-    <LinearLayout android:id="@+id/dynamic_graph_layout"
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-                  android:layout_margin="6dp"
-                  android:orientation="vertical"
-                  android:paddingBottom="@dimen/activity_vertical_margin"
-                  android:paddingLeft="@dimen/activity_horizontal_margin"
-                  android:paddingRight="@dimen/activity_horizontal_margin"
-                  android:paddingTop="@dimen/activity_vertical_margin">
+    <android.support.v4.view.ViewPager
+        android:id="@+id/dynamic_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    </LinearLayout>
+        <LinearLayout android:id="@+id/dynamic_graph_layout"
+                      android:layout_width="match_parent"
+                      android:layout_height="match_parent"
+                      android:layout_margin="6dp"
+                      android:orientation="vertical"
+                      android:paddingBottom="@dimen/activity_vertical_margin"
+                      android:paddingLeft="@dimen/activity_horizontal_margin"
+                      android:paddingRight="@dimen/activity_horizontal_margin"
+                      android:paddingTop="@dimen/activity_vertical_margin">
+
+        </LinearLayout>
+    </android.support.v4.view.ViewPager>
+
+
 </LinearLayout>
