--- a/FinancialAssistant/src/main/res/layout/main_layout.xml
+++ b/FinancialAssistant/src/main/res/layout/main_layout.xml
@@ -1,19 +1,23 @@
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                        android:id="@+id/drawer_layout"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        >
+<android.support.v4.widget.DrawerLayout
+    android:id="@+id/drawer_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
 
-    <FrameLayout android:id="@+id/content_frame"
-                 android:layout_width="match_parent"
-                 android:layout_height="match_parent"/>
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="visible"/>
 
-    <ListView android:id="@+id/left_drawer"
-              android:layout_gravity="start"
-              android:choiceMode="singleChoice"
-              android:divider="#666666"
-              android:dividerHeight="1dp"
-              android:background="#333333"
-              android:scrollbars="none"
-              style="@style/navigationDrawer"/>
+    <ListView
+        android:id="@+id/left_drawer"
+        style="@style/navigationDrawer"
+        android:layout_gravity="start"
+        android:background="#333333"
+        android:choiceMode="singleChoice"
+        android:divider="#666666"
+        android:dividerHeight="1dp"
+        android:scrollbars="none"/>
 </android.support.v4.widget.DrawerLayout>
