--- a/FinancialAssistant/src/main/res/values/styles.xml
+++ b/FinancialAssistant/src/main/res/values/styles.xml
@@ -2,17 +2,27 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:actionBarStyle">@style/CustomActionBarTheme</item>
+        <item name="android:actionBarTabBarStyle">@style/CustomTabsActionBar</item>
     </style>
 
     <style name="ProgressBar.Horizontal" parent="Widget.AppCompat.ProgressBar.Horizontal">
     </style>
 
+    <!-- ActionBar styles -->
+    <style name="CustomActionBarTheme" parent="Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+        <item name="android:background">@color/RoyalBlue</item>
+    </style>
+
+    <style name="CustomTabsActionBar" parent="Widget.AppCompat.ActionBar.TabBar">
+        <item name="android:background">@color/RoyalBlue</item>
+    </style>
 
     <style name="navigationDrawer">
         <item name="android:layout_width">@dimen/drawer_slide_size</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:paddingLeft">15dp</item>
-        <item name="android:paddingRight">15dp</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingRight">8dp</item>
     </style>
 
     <style name="ListView" parent="@android:style/Widget.ListView">
